adding links for lightbox

--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -3,9 +3,8 @@
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide12-refugee.md %}
       <div class="lightbox-link">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch Lloyd Axworthy introduce the World Refugee Council.
-
-          </a>
+          <div class="youtube-lightbox pointer" data-videoid="7miQEf7ZGGs"><i class="fa fa-play" aria-hidden="true"></i>Watch Lloyd Axworthy introduce the World Refugee Council.
+          </div>
       </div>
     </div>
   </div>
