--- a/_includes/slide13.html
+++ b/_includes/slide13.html
@@ -3,9 +3,8 @@
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide13-ip.md %}
       <div class="lightbox-link">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property
-            
-          </a>
+          <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property
+          </div>
       </div>
     </div>
   </div>
