--- a/_includes/slide15.html
+++ b/_includes/slide15.html
@@ -3,7 +3,8 @@
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide15-imf.md %}
       <div class="lightbox-link">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch historian and Senior Fellow Harold James explain how crisis has shaped the IMF.</a>
+          <div class="youtube-lightbox pointer" data-videoid="ZGGdBEwtCaM"><i class="fa fa-play" aria-hidden="true"></i>Watch historian and Senior Fellow Harold James explain how crisis has shaped the IMF.</div>
+        
     </div>
     </div>
   </div>
