--- a/_includes/slide8.html
+++ b/_includes/slide8.html
@@ -6,7 +6,7 @@
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
       </div>
       <div class="lightbox-link">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</a>
+          <div class="twitter-lightbox pointer" data-tweetid="869957715375869952"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</div>
       </div>
       <div class="photo-caption">
         <p><em>Natives Playing on the Land</em> by Lawrence Paul Yuxweluptun</p>
