styling timeline mobile slide:

--- a/_includes/toc-mobile.html
+++ b/_includes/toc-mobile.html
@@ -1,6 +1,6 @@
 <div class="toc-mobile-wrapper hidden">
     <ul>
-        <li><a class="toc-mobile-item toc-slide-0">Message about desktop</a></li>
+        <li><a class="toc-mobile-item toc-slide-0">Explore CIGI 2017</a></li>
         <li><a class="toc-mobile-item toc-slide-1">CIGI 2017</a></li>
         <li><a class="toc-mobile-item toc-slide-2">Influential Research. Trusted Analysis</a></li>
         <li><a class="toc-mobile-item toc-slide-3 president">President’s Message</a></li>
