--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -124,4 +124,10 @@
     .visibility-none{
         visibility: hidden;
     }
+    .mobile-timeline-message{
+        padding: 0 2em;
+        h1{
+            padding-bottom: 1em;
+        }
+    }
 }
