updating slides to remove open in new window

--- a/_includes/slide9.html
+++ b/_includes/slide9.html
@@ -3,7 +3,7 @@
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide9-north.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/north-60-toward-renewed-canadian-arctic-agenda?source=2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/north-60-toward-renewed-canadian-arctic-agenda?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
       </div>
     </div>
   </div>
