--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -3,7 +3,7 @@
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide16-t20.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
       </div>
       <div class="photo-caption">
         <p>Global Solutions/Tobias Koch</p>
