--- a/_includes/slide5.html
+++ b/_includes/slide5.html
@@ -3,7 +3,7 @@
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide5-nafta.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Full Article</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Full Article</a>
       </div>
     </div>
   </div>
