--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -6,7 +6,7 @@
       </div>
       {% markdown template_content/slide6-gcig.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
       </div>
       <div class="lightbox-link">
           <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about Look Who’s Watching</div>
