--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -6,7 +6,7 @@
         </div>
       {% markdown template_content/slide7-eurozone.md %}
       <div class="view-article pb2 pt2">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
       </div>
       <div class="lightbox-link">
             <div class="lightbox-link">
