--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,35 +1,38 @@
 <section class="vh-100 landing slide-1">
   <div class="wrapper h-100">
-      <div class="circle"></div>
-      <div class="arc"></div>
     <div class="content-wrapper">
 
         {% markdown template_content/home.md %}
-        <div class="content col">
-            <div class="title">CIGI<br><span>2017</span></div>
-            <div class="intro">We are the Centre for International Governance Innovation: an independent, non-partisan think tank with an objective and uniquely global perspective. Our research, opinions and public voice make a difference in today’s world by bringing clarity and innovative thinking to global policy making.</div>
-            <div class="nav">
-                <div class="explore">
-                    <div class="up pointer">
-                        <div class="arrows">
-                            <i class="fa fa-angle-up arrow arrow-2" aria-hidden="true"></i>
-                            <i class="fa fa-angle-up arrow arrow-1" aria-hidden="true"></i>
+        <div class="content">
+            <div class="title">CIGI 2017</div>
+
+            <div class="intro">
+                <p>We are the Centre for International Governance Innovation: an independent, non-partisan think tank with an objective and uniquely global perspective. Our research, opinions and public voice make a difference in today’s world by bringing clarity and innovative thinking to global policy making.</p>
+                <div class="nav">
+                    <div class="explore">
+                        <div class="up pointer">
+                            <div class="arrows">
+                                <i class="fa fa-angle-up arrow arrow-2" aria-hidden="true"></i>
+                                <i class="fa fa-angle-up arrow arrow-1" aria-hidden="true"></i>
+                            </div>
                         </div>
+                        <div class="no-underline link pointer">Explore CIGI</div>
                     </div>
-                    <div class="no-underline link pointer">Explore CIGI</div>
-                </div>
-                <div class="view-ar">
-                    <div class="no-underline link pointer">View Annual Report</div>
-                    <div class="down pointer">
-                        <div class="arrows">
-                            <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
-                            <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
+                    <div class="view-ar">
+                        <div class="no-underline link pointer">View Annual Report</div>
+                        <div class="down pointer">
+                            <div class="arrows">
+                                <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
+                                <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
+                            </div>
                         </div>
+                        
                     </div>
-                    
                 </div>
+
             </div>
         </div>
+            
     </div>
 
   </div>
