removed slide 2 and reordered slides

--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -1,16 +1,16 @@
 <section class="vh-100 standard-slide slide-12">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide12-refugee.md %}
+      {% markdown template_content/slide12-ip.md %}
       <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="7miQEf7ZGGs"><i class="fa fa-play" aria-hidden="true"></i>Watch Lloyd Axworthy introduce the World Refugee Council.
+          <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property
           </div>
       </div>
     </div>
   </div>
   <div class="fullscreen-bg">
-      <video loop muted class="fullscreen-bg-video">
-          <source src="{{ "/data/WRC-Loop4-TimeRemap-2-4mbps.mp4" | relative_url }}" type="video/mp4">
-      </video>
-  </div>
+    <video loop muted class="fullscreen-bg-video">
+        <source src="{{ "/data/IP-Loop_2-4mbps.mp4" | relative_url }}" type="video/mp4">
+    </video>
+</div>
 </section>
