--- a/_includes/slide14.html
+++ b/_includes/slide14.html
@@ -1,19 +1,11 @@
 <section class="vh-100 standard-slide slide-14">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide14-blockchain.md %}
-      <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
-      </div>
+      {% markdown template_content/slide14-imf.md %}
       <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="SWqhXzC_9NA"><i class="fa fa-play" aria-hidden="true"></i>Watch the companion video to Julie Maupin’s report on realizing policy through blockchain</div>
-
-      </div>
+          <div class="youtube-lightbox pointer" data-videoid="ZGGdBEwtCaM"><i class="fa fa-play" aria-hidden="true"></i>Watch historian and Senior Fellow Harold James explain how crisis has shaped the IMF.</div>
+        
     </div>
-  </div>
-  <div class="fullscreen-bg">
-    <video loop muted class="fullscreen-bg-video">
-      <source src="{{ "/data/blockchain_2-4mbps.mp4" | relative_url }}" type="video/mp4">
-    </video>
+    </div>
   </div>
 </section>
