--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -83,7 +83,6 @@
   
   .tab.selected {
     color: $grey-color; 
-    //background: rgba(0, 0, 0, 0.25);
     border: solid 1px $grey-color;
     border-left: none;
     border-right: solid 1px $accent-color;
@@ -129,11 +128,13 @@ header .tabs{
 }
 
 .tab-content {
+  position: relative;
   .tab {
-    display: none;
+    position: absolute;
+    visibility: hidden;
     
     &.selected {
-      display: block;
+      visibility: visible;
     }
   }
 }
