--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -1,10 +1,16 @@
 <section class="vh-100 standard-slide slide-10">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide10-carbon.md %}
-      <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/generating-growth-innovation-low-carbon-economy-exploring-safeguards-finance-and?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+      {% markdown template_content/slide10-climate.md %}
+      <div class="lightbox-link">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>See Jeff Rubin talk about soy crops in Canada at CIGI.
+        </a>
       </div>
     </div>
+  </div>
+  <div class="fullscreen-bg">
+    <video loop muted class="fullscreen-bg-video">
+      <source src="{{ "/data/wind_turbine_FIX_2-4mbps_1.mp4" | relative_url }}" type="video/mp4">
+    </video>
   </div>
 </section>
