--- a/_includes/slide11.html
+++ b/_includes/slide11.html
@@ -1,16 +1,16 @@
 <section class="vh-100 standard-slide slide-11">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide11-climate.md %}
+      {% markdown template_content/slide11-refugee.md %}
       <div class="lightbox-link">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>See Jeff Rubin talk about soy crops in Canada at CIGI.
-        </a>
+          <div class="youtube-lightbox pointer" data-videoid="7miQEf7ZGGs"><i class="fa fa-play" aria-hidden="true"></i>Watch Lloyd Axworthy introduce the World Refugee Council.
+          </div>
       </div>
     </div>
   </div>
   <div class="fullscreen-bg">
-    <video loop muted class="fullscreen-bg-video">
-      <source src="{{ "/data/wind_turbine_FIX_2-4mbps_1.mp4" | relative_url }}" type="video/mp4">
-    </video>
+      <video loop muted class="fullscreen-bg-video">
+          <source src="{{ "/data/WRC-Loop4-TimeRemap-2-4mbps.mp4" | relative_url }}" type="video/mp4">
+      </video>
   </div>
 </section>
