--- a/_includes/slide13.html
+++ b/_includes/slide13.html
@@ -1,16 +1,19 @@
 <section class="vh-100 standard-slide slide-13">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide13-ip.md %}
+      {% markdown template_content/slide13-blockchain.md %}
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+      </div>
       <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property
-          </div>
+          <div class="youtube-lightbox pointer" data-videoid="SWqhXzC_9NA"><i class="fa fa-play" aria-hidden="true"></i>Watch the companion video to Julie Maupin’s report on realizing policy through blockchain</div>
+
       </div>
     </div>
   </div>
   <div class="fullscreen-bg">
     <video loop muted class="fullscreen-bg-video">
-        <source src="{{ "/data/IP-Loop_2-4mbps.mp4" | relative_url }}" type="video/mp4">
+      <source src="{{ "/data/blockchain_2-4mbps.mp4" | relative_url }}" type="video/mp4">
     </video>
-</div>
+  </div>
 </section>
