--- a/_includes/slide15.html
+++ b/_includes/slide15.html
@@ -1,11 +1,13 @@
 <section class="vh-100 standard-slide slide-15">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide15-imf.md %}
-      <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="ZGGdBEwtCaM"><i class="fa fa-play" aria-hidden="true"></i>Watch historian and Senior Fellow Harold James explain how crisis has shaped the IMF.</div>
-        
-    </div>
+      {% markdown template_content/slide15-t20.md %}
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+      </div>
+      <div class="photo-caption">
+        <p>Global Solutions/Tobias Koch</p>
+      </div>
     </div>
   </div>
 </section>
