--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,38 +1,10 @@
-<section class="vh-100 default-background financials" id="slide-17">
-    <div class="wrapper h-100">
-        <div class="w-100 pt5 pt6-ns">
-            <div class="tabs" data-slide="slide-17">
-                <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
-                <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
-                <div class="tab toggle" data-id="tab-3">Notes</div>
-                <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
-            </div>
-           
-            <div class="tab-content">
-                <div class="tab" data-id="tab-1">
-                    {% markdown template_content/slide17-auditor.md %}
-                    <div class="col">
-                        {% include slide17-auditor.html %}
-                    </div>
-                </div>
-                <div class="tab cf" data-id="tab-2">
-                   
-                        {% include slide17-sheet1.html %}
-                        {% include slide17-sheet2.html %}
-                 
-                </div>
-                <div class="tab" data-id="tab-3">  
-                   
-                    <h4>Notes</h4>
-                    <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
-                    <p>The Operating and Capital Funds account for the Organization’s program delivery, administrative activities, and non-campus related capital assets.</p>
-                    <p>The Africa Restricted Fund is focused on the effects of climate change on Africa’s security and socioeconomic development.</p>
-                    <p>The John Holmes Fund is focused on funding the operations of the library.</p>
-                    <p>The Decade Fund is focused on long-term research and capacity building projects to contribute to the development of innovative ideas that are relevant to the Province of Ontario.</p>
-                    <p>The Campus Fund is a Organization initiative in collaboration with provincial and federal governments designed to house several graduate schools and programs. Two such initiatives are the Balsillie School of International Affairs (BSIA) and the ILRP. As a hub of different schools and programs, the Campus Fund cultivates an interdisciplinary learning environment focused on developing knowledge of global issues</p>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
+<section class="vh-100 standard-slide slide-17">
+  <script src="https://platform.twitter.com/widgets.js"></script>
+  <script src="https://www.youtube.com/player_api"></script>
+  <div class="wrapper h-100 pt6">
+    <h1>Testing</h1>
+    <div class="twitter-lightbox pointer" data-tweetid="511181794914627584">Click here for tweet</div>
+    <div class="youtube-lightbox pointer" data-videoid="M7lc1UVf-VE">Click here for youtube</div>
+    <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/dragonforceofficial/avant-la-temp-te-instrumental">Click here for soundcloud</div>
+  </div>
 </section>
