--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -1,22 +1,10 @@
 <section class="vh-100 standard-slide slide-4">
-    <div class="wrapper h-100">
-      <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-        {% markdown template_content/slide4-innovation.md %}
-        <div class="view-article pb2 pt2">
-            <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Full Article</a>
-        </div>
-        
-        <div class="lightbox-link">
-            <div class="youtube-lightbox pointer" data-videoid="s-QpV6AG-qg"><i class="fa fa-play" aria-hidden="true"></i>Watch CIGI President Rohinton P. Medhora introduce the New Thinking on Innovation series</div>
-        </div>
-
+  <div class="wrapper h-100">
+    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+      {% markdown template_content/slide4-nafta.md %}
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Full Article</a>
       </div>
     </div>
-    <div class="fullscreen-bg">
-      <video loop muted class="fullscreen-bg-video">
-          <source src="{{ "/data/WebLoop_3.mp4" | relative_url }}" type="video/mp4">
-      </video>
-    </div>
-  </section>
-
-  
+  </div>
+</section>
