--- a/_includes/slide5.html
+++ b/_includes/slide5.html
@@ -1,10 +1,16 @@
 <section class="vh-100 standard-slide slide-5">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide5-nafta.md %}
-      <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Full Article</a>
+      <div class="book-cover">
+          <img src="{{ "/assets/lookwhostalking-cover.png" | relative_url }}" alt="Book Cover for Look Who's Talking">
       </div>
+      {% markdown template_content/slide5-gcig.md %}
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+      </div>
+      <div class="lightbox-link">
+          <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about Look Who’s Watching</div>
+    </div>
     </div>
   </div>
 </section>
