--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -1,16 +1,19 @@
 <section class="vh-100 standard-slide slide-6">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      <div class="book-cover">
-          <img src="{{ "/assets/lookwhostalking-cover.png" | relative_url }}" alt="Book Cover for Look Who's Talking">
-      </div>
-      {% markdown template_content/slide6-gcig.md %}
+        <div class="book-cover">
+            <img src="{{ "/assets/laidlow-cover.png" | relative_url }}" alt="Book Cover for Laid Low">
+        </div>
+      {% markdown template_content/slide6-eurozone.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
       </div>
       <div class="lightbox-link">
-          <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about Look Who’s Watching</div>
-    </div>
+            <div class="lightbox-link">
+                <div class="youtube-lightbox pointer" data-videoid="1r48pRFarEw"><i class="fa fa-play" aria-hidden="true"></i>Watch a behind-the-scenes account of how the euro-zone crisis caught the IMF off guard</div>
+                </div>
+           
+      </div>
     </div>
   </div>
 </section>
