--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -1,18 +1,15 @@
 <section class="vh-100 standard-slide slide-7">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-        <div class="book-cover">
-            <img src="{{ "/assets/laidlow-cover.png" | relative_url }}" alt="Book Cover for Laid Low">
-        </div>
-      {% markdown template_content/slide7-eurozone.md %}
+      {% markdown template_content/slide7-undrip.md %}
       <div class="view-article pb2 pt2">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
       </div>
       <div class="lightbox-link">
-            <div class="lightbox-link">
-                <div class="youtube-lightbox pointer" data-videoid="1r48pRFarEw"><i class="fa fa-play" aria-hidden="true"></i>Watch a behind-the-scenes account of how the euro-zone crisis caught the IMF off guard</div>
-                </div>
-           
+          <div class="twitter-lightbox pointer" data-tweetid="869957715375869952"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</div>
+      </div>
+      <div class="photo-caption">
+        <p><em>Natives Playing on the Land</em> by Lawrence Paul Yuxweluptun</p>
       </div>
     </div>
   </div>
