--- a/_includes/slide8.html
+++ b/_includes/slide8.html
@@ -1,15 +1,9 @@
 <section class="vh-100 standard-slide slide-8">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-      {% markdown template_content/slide8-undrip.md %}
+      {% markdown template_content/slide8-north.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
-      </div>
-      <div class="lightbox-link">
-          <div class="twitter-lightbox pointer" data-tweetid="869957715375869952"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</div>
-      </div>
-      <div class="photo-caption">
-        <p><em>Natives Playing on the Land</em> by Lawrence Paul Yuxweluptun</p>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/north-60-toward-renewed-canadian-arctic-agenda?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
       </div>
     </div>
   </div>
