--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -9,6 +9,10 @@
   background-image: url('../assets/cigi-campus-min.jpg');
 }
 
+.slide-3 {
+  background-image: url('../assets/Slide-Still-Innovation_Knowledge.png');
+}
+
 .slide-5 {
   background-image: url('../assets/nafta.jpg');
 }
@@ -30,6 +34,10 @@
 }
 
 .slide-10{
+  background-image: url('../assets/low-carbon-economy-min.jpg');
+}
+
+.slide-13{
   background-image: url('../assets/low-carbon-economy-min.jpg');
 }
 
