--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -3,30 +3,30 @@
     <main class="wrapper w-100 mt6-ns mt4 flex justify-between" aria-label="CIGI">
       {% markdown template_content/timeline.md %}
       <div id="user-hint-1" class="user-select-none">
-        <div id="user-hint-hover" class="ttu tracked f6 b fw4 grey-color tl mb3 fade-in-1 o-0">
-          <div class="v-mid cover h2 w2 dib"
+        <div id="user-hint-hover" class="ttu tracked b fw4 grey-color tl mb3 fade-in-1 o-0">
+          <div class="arrow v-mid cover dib"
                style="background:url('{{ "/data/icons/hover.svg" | relative_url }}') no-repeat"></div>
           Hover over a point for more info
         </div>
-        <div id="user-hint-click" class="dn ttu tracked f6 b fw4 grey-color tl mb3 fade-in-1 o-0">
-          <div class="v-mid cover h2 w2 dib"
+        <div id="user-hint-click" class="dn ttu tracked b fw4 grey-color tl mb3 fade-in-1 o-0">
+          <div class="arrow v-mid cover dib"
                style="background:url('{{ "/data/icons/single-click.svg" | relative_url }}') no-repeat"></div>
           Click on the point to view the article
         </div>
-        <div id="user-hint-zoom-in" class="ttu tracked f6 b fw4 grey-color tl fade-in-2 o-0">
-          <div class="v-mid cover h2 w2 dib"
+        <div id="user-hint-zoom-in" class="ttu tracked b fw4 grey-color tl fade-in-2 o-0">
+          <div class="arrow v-mid cover dib"
                style="background:url('{{ "/data/icons/double-click.svg" | relative_url }}') no-repeat"></div>
           Double click timeline to zoom in
         </div>
       </div>
       <div id="user-hint-2" class="user-select-none dn">
-        <div id="user-hint-grab" class="ttu tracked f6 b fw4 grey-color tl mb3 o-0">
-          <div class="v-mid cover h2 w2 dib"
+        <div id="user-hint-grab" class="ttu tracked b fw4 grey-color tl mb3 o-0">
+          <div class="arrow v-mid cover dib"
                style="background:url('{{ "/data/icons/grab.svg" | relative_url }}') no-repeat"></div>
           Grab & drag to move timeline
         </div>
-        <div id="user-hint-zoom-out" class="ttu tracked f6 b fw4 grey-color tl o-0">
-          <div class="v-mid cover h2 w2 dib"
+        <div id="user-hint-zoom-out" class="ttu tracked b fw4 grey-color tl o-0">
+          <div class="arrow v-mid cover dib"
                style="background:url('{{ "/data/icons/double-click.svg" | relative_url }}') no-repeat"></div>
           Double click timeline to zoom out
         </div>
