updates to font size

--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,6 +1,6 @@
 <section class="vh-100 default-background financials" id="slide-16">
     <div class="wrapper h-100">
-        <div class="w-100 pt5 pt6-ns">
+        <div class="w-100">
             <div class="tabs" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
@@ -16,10 +16,8 @@
                     </div>
                 </div>
                 <div class="tab cf" data-id="tab-2">
-                   
-                        {% include slide16-sheet1.html %}
-                        {% include slide16-sheet2.html %}
-                 
+                    {% include slide16-sheet1.html %}
+                    {% include slide16-sheet2.html %}
                 </div>
                 <div class="tab" data-id="tab-3">  
                    
