--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -5,10 +5,6 @@
   filter: saturate(1.2);
 }
 
-.cover-slide{
-  background-image: url('../assets/cigi-campus-min.jpg');
-}
-
 .slide-4 {
   background-image: url('../assets/nafta.jpg');
 }
@@ -152,9 +148,8 @@ header .tabs{
 .photo-caption{
   color: $grey-color-dark;
   display: inline-block;
-  margin-left: -1em;
-  margin-top: 2em;
-  padding: 0.5em;
+  margin-left: -0.3em;
+  margin-top: 1em;
   transition: color .5s ease-in, background-color .5s ease-in;
   border-radius: 9999px;
   p {
@@ -262,6 +257,10 @@ p {
   h3 {
     display: none;
   }
+}
+
+.joint-message, .financials{
+  padding-top: 6rem;
 }
 
 .cover-slide {
