--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -1,3 +1,15 @@
+// Media queries
+
+$on-palm: 600px;
+$on-laptop: 880px;
+$small-screen: 1200px;
+@mixin media-query($device) {
+  @media screen and (max-width: $device) {
+    @content;
+  }
+}
+
+
 //Define Font Variables
 
 $base-font-family: 'futura-pt', Helvetica, Arial, sans-serif;
@@ -53,12 +65,6 @@ figure {
   margin: 0;
   padding: 0;
 }
-
-// Media queries
-
-$on-palm: 600px;
-$on-laptop: 880px;
-
 // Use media queries like this:
 // @include media-query($on-palm) {
 //   .wrapper {
@@ -66,11 +72,6 @@ $on-laptop: 880px;
 //     padding-left: $spacing-unit / 2;
 //   }
 // }
-@mixin media-query($device) {
-  @media screen and (max-width: $device) {
-    @content;
-  }
-}
 
 @mixin relative-font-size($ratio) {
   font-size: $base-font-size * $ratio;
