--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -9,7 +9,7 @@
                 <div class="tab" data-id="tab-1">
                     {% markdown template_content/slide2-president.md %}
                     <div class="col">
-                        <p><span class="dropcap">T</span>rust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
+                        <p>Trust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
                         <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
                         <p>CIGI’s new identity, launched with a new website, tells a story about who we are as an organization: an innovative global think tank that delivers influential research and trusted analysis. We underline, in contrast to “fake news,” the role of CIGI as a trustworthy source of information and insight.</p>
                         <p>The success stories featured in this annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story of the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
@@ -26,7 +26,7 @@
                 <div class="tab" data-id="tab-2" data-name="chairs-message">
                     {% markdown template_content/slide2-chair.md %}
                     <div class="col">
-                        <p><span class="dropcap">T</span>he global economy is increasingly shifting from the delivery of goods and services to an international commerce in ideas and yet policies and incentives have not always kept up with the transition. A new approach to stimulating innovation in Canada and abroad is necessary.</p>
+                        <p>The global economy is increasingly shifting from the delivery of goods and services to an international commerce in ideas and yet policies and incentives have not always kept up with the transition. A new approach to stimulating innovation in Canada and abroad is necessary.</p>
                         <p>Over the past year, CIGI has put a spotlight on this issue, tackling questions around innovation policies and strategies with expertise, analysis and research. CIGI’s “New Thinking on Innovation” series, launched in the spring, breathed new life into discussions and will continue to influence policy in Ottawa and elsewhere.</p>
                         <p>In the series, corporate leaders, economists and trade and international law experts brought perspective and specific policy recommendations for international trade deals, patent systems and intellectual property strategies, and the role global institutions like the Group of Twenty can play in supporting innovation among smaller countries.</p>
                         <p>Among others, we heard from business leaders like Neil Desai and Benjamin Bergen as well as legal experts Michael Geist and new CIGI Senior Fellow E. Richard Gold. In a November 2016 event and through a series of resulting video interviews, Gold also looked beyond technology to the main driver of innovation: people and the societal contexts that foster their successful innovations.</p>
