switch back to display for tabs

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -148,13 +148,10 @@ header .tabs{
 }
 
 .tab-content {
-  position: relative;
   .tab {
-    position: absolute;
-    visibility: hidden;
-    
+    display: none;
     &.selected {
-      visibility: visible;
+      display: block;
     }
   }
 }
