adding photo gallery

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -17,30 +17,26 @@
   </div>
   <div class="w-80 m-auto">
     <div class="mt5 vh-50 gallery relative" id="gallery">
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/800/450?image=1011'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/600/850?image=11'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/850?image=1075'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=14'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=15'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=16'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=17'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=18'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=19'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=20'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=21'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=23'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=24'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=25'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=26'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=27'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=28'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=29'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=30'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=33'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=34'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=35'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=42'/></div>
-      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=46'/></div>
+      <div class="gallery-img-wrapper"><img alt="Launch of Drgon's Footprint" src='{{ "/assets/gallery/IMG_4019.JPG" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='{{ "/assets/gallery/CIGI Innovation meeting-54.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='{{ "/assets/gallery/Bessma Momani_015.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="2016 Global Think Tank Summit roundtable" src='{{ "/assets/gallery/2016-09-30 - Global Think Tank Summit - 17.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Participants in the 2016 Global Think Tank Summit" src='{{ "/assets/gallery/2016-09-28 - Global Think Tank Summit - 92.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="CIGI President Rohinton Medhora beside then Minister of Foreign Affairs Stéphane Dion" src='{{ "/assets/gallery/2016-09-28 - Global Think Tank Summit - 106.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Former United States Ambassador to Finland Derek Shearer on stage at the CIGI Campus" src='{{ "/assets/gallery/Shearer - CIGI_017.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Deputy Governor of the Bank of Canada Timothy Lane on stage at the CIGI Campus" src='{{ "/assets/gallery/2016-11-16-Timothy Lane-20.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='{{ "/assets/gallery/ 2016-11-19-091552-19405.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference" src='{{ "/assets/gallery/IMG_2742.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Senior Fellow Julie Maupin delivers a presentation on the rise of Bitcoin" src='{{ "/assets/gallery/CIGI Bitcoins_002.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='{{ "/assets/gallery/2016-11-25 Global Youth Forum - 2_050.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='{{ "/assets/gallery/3W7A0257.JPG" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Local high school student participates in the Waterloo District School Board Model UN at the CIGI Campus" src='{{ "/assets/gallery/2017-03-24 - Model UN - 39.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='{{ "/assets/gallery/2017-04-03-Media Panel-Reporting the Refugee Crisis-7.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Senior Fellow Jeff Rubin on stage at the CIGI Campus" src='{{ "/assets/gallery/2017-05-11-Speaker Series-Jeff Rubin-29.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="World Refugee Council chair Lloyed Axworthy" src='{{ "/assets/gallery/CiGi_67I7855.JPG" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='{{ "/assets/gallery/CiGi_67I7832.JPG" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="CIGI President Rohinton Medhora on stage at the Think20 (T20) summit" src='{{ "/assets/gallery/380__1TK0083_ed_z.jpg" | relative_url }}'/></div>
+      <div class="gallery-img-wrapper"><img alt="Executive members of the World Refugee Council in Geneva Switzerland" src='{{ "/assets/gallery/WRC-Council-Leadership 1.jpg" | relative_url }}'/></div>
     </div>
   </div>
 </section>
