--- a/_includes/home.html
+++ b/_includes/home.html
@@ -16,10 +16,10 @@
                                     <i class="fa fa-angle-up arrow arrow-1" aria-hidden="true"></i>
                                 </div>
                             </div>
-                            <div class="no-underline link pointer pr3-ns pr2">Explore CIGI</div>
+                            <div class="no-underline link pointer pr3">Explore CIGI</div>
                         </div>
                         <div class="view-ar">
-                            <div class="no-underline link pointer pl3-ns pl2">View Annual Report</div>
+                            <div class="no-underline link pointer pl3-ns pl0">View Annual Report</div>
                             <div class="down pointer">
                                 <div class="arrows">
                                     <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
