small h1, tab updates, smaller fonts

--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,6 +1,6 @@
 <section class="vh-100 default-background joint-message" id="slide-2">
     <div class="wrapper h-100">
-        <div class="flex center flex-column pt6 pr4 pt6-ns w-100">
+        <div class="flex center flex-column w-100">
             <div class="tabs" data-slide="slide-2">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
@@ -18,7 +18,7 @@
                         <p>New books captured the preoccupations of our times. Look Who’s Watching: Surveillance, Treachery and Trust Online and Laid Low: Inside the Crisis that Overwhelmed Europe and IMF tell troubling tales and yet are nevertheless optimistic about the future.</p>
                         <p>And at the Global Think Tank Summit CIGI hosted in September 2016 with the Think Tanks and Civil Societies Program at the Lauder Institute of the University of Pennsylvania, we pursued conversations focused on threats posed by populist movements to global institutions.</p>
                         <p>Public uncertainty and distrust of our institutions has demonstrated the need to bring clarity and innovative thinking to global policy making. As a non-partisan, independent think tank, CIGI is positioned as a credible, trustworthy place to find answers.</p>
-                    <div><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
+                    <div class="sig-image"><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
                     <p class="signature">Rohinton P. Medhora<br>
                     President, CIGI</p>
                     </div>
@@ -35,7 +35,7 @@
                         <p>In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations by publishing a series of original pieces on NAFTA and the Knowledge Economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and intellectual property under a NAFTA 2.0.</p>
                         <p>Independent, peer-reviewed research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces demonstrate CIGI’s commitment to meeting the needs of today’s decision makers while also reaching new audiences.</p>
                         <p>The continued support of our many global and local partners – and especially from the Governments of Canada and Ontario, and the City of Waterloo – is paramount to ensuring CIGI’s ongoing success as a relevant and innovative Canadian think tank with a global perspective.</p>
-                        <div><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
+                        <div class="sig-image"><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
                         <p class="signature">Jim Balsillie<br>
                         Chair, CIGI Board of Directors</p>
                     </div>
