--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -5,7 +5,7 @@
         <td>2017</td>
     </tr>   
     <tr class="title">
-        <td>Summarized Balance Sheet<br><span>as of July 31, 2016</span></td>
+        <td>Summarized Balance Sheet <span>(as of July 31, 2016)</span></td>
         <td>Total</td>
     </tr>                        
 </thead>
