--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -5,7 +5,7 @@
             <td>2017</td>
         </tr>   
         <tr class="title">
-            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances<br><span>for the year ended July 31, 2016</span></td>
+            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances <span>(for the year ended July 31, 2016)</span></td>
             <td>Total</td>
         </tr>                        
     </thead>
