updating IS slide image

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -10,7 +10,7 @@
 }
 
 .slide-3{
-  background-image: url('../assets/innovation-series-still.png');
+  background-image: url('../assets/AR_InnovationSeries_mobile.jpg');
 }
 
 .slide-4 {
