hiding explore cigi 2017 link in mobile toc

--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -58,6 +58,9 @@
             padding: 4em 1em 0 1em;
             font-size: 1em;
             list-style: none;
+            li:first-child{
+                display:none;
+            }
 
         }
     }
