updating staff photo

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -62,7 +62,7 @@
 }
 
 .slide-17 {
-  background-image: url('../assets/CIGI_Family_Photo_v1.jpg');
+  background-image: url('../assets/CIGI_Family_Photo_v2.jpg');
 }
 
 .fullscreen-bg-video {
@@ -210,7 +210,7 @@ p {
   background-size: cover;
   overflow: hidden;
   position: relative;
-  &.slide-18{
+  &.slide-17{
     background-position: right;
   }
 
@@ -360,15 +360,14 @@ header.white{
   .title, .intro{
     float: left;
     width: 50%;
+    padding-top: 2rem;
   }
   .title{
     font-size: 9rem;
     line-height: 7rem;
     font-weight: 800;
   }
-  p{
-    margin-top: 2rem;
-  }
+
   .nav{
     margin: 2rem;
     left: 47%;
