--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -1,11 +1,7 @@
 <table class="balance-sheet table1">
 <thead>
-    <tr class="year">
-        <td>2017</td>
-        <td>2017</td>
-    </tr>   
     <tr class="title">
-        <td>Summarized Balance Sheet <span>(as of July 31, 2016)</span></td>
+        <td>Summarized Balance Sheet <span>*</span></td>
         <td>Total</td>
     </tr>                        
 </thead>
