--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -1,11 +1,7 @@
 <table class="balance-sheet table2">
-    <thead>
-        <tr class="year">
-            <td>2017</td>
-            <td>2017</td>
-        </tr>   
+    <thead> 
         <tr class="title">
-            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances <span>(for the year ended July 31, 2016)</span></td>
+            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances <span>*</span></td>
             <td>Total</td>
         </tr>                        
     </thead>
@@ -80,3 +76,4 @@
     </tr>
 </tbody>
 </table>
+<p class="small"><span>*</span> as of July 2017</p>
