updated G20 slide bg, main title now svg

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -58,7 +58,7 @@
 }
 
 .slide-15 {
-  background-image: url('../assets/G20-min.jpg');
+  background-image: url('../assets/AP_17189508496888.jpg');
 }
 
 .slide-17 {
